--- a/styles/a1_styles.css
+++ b/styles/a1_styles.css
@@ -53,6 +53,7 @@ div.div_student_mid{
 [href]{
     color:lightskyblue;
 }
+
 /*
 ID Section
 */
@@ -107,8 +108,6 @@ ul.no_bullets{
     padding:0;
     margin-bottom: 0;
     margin-top: 0;
-    background-image: url("/images/delete.png");
-    
 }
 
 li.sec1_list{
@@ -139,17 +138,20 @@ li:last-child.sec1_list{
 /*
 Buttons
 */
-button{
-    color: white;
-    background-color: #3A6BA5;
-    border: none;
+
+a.button{
+    background-color: #436abf;
     border-radius: 5px;
-    padding-top: 1em;
-    padding-bottom: 1em;
-    padding-left: 8em;
-    padding-right: 8em;
+    padding-left: 5em;
+    padding-right: 5em;
+    padding-top: 0.5em;
+    padding-bottom: 0.5em;
+    color:white;
+    text-decoration: none;
+    
 }
-button:hover{
+
+a.button:hover{
     background-color: #437CBF;
 }
 
